# AutoPrompt

./: AutoPrompt_Llama.ipynb  README.md  pyproject.toml  requirements.txt
config/: config_llama.yml
dataset/: base_dataset.py
estimator/: __init__.py
utils/: config.py  llm_chain.py
