[project]
name = "autoprompt"
version = "0.1.0"
description = "Iterative prompt optimization using a fixed annotated dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easydict>=1.13",
    "langchain>=0.2,<0.3",
    "langchain-community>=0.2",
    "langchain-core>=0.2",
    "langchain-openai>=0.1.7",
    "pandas>=1.5",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
]
